--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,19 @@ android {
 }
 
 dependencies {
+    implementation project(":lib-cache")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.5.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.2"
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation(platform("org.dizitart:nitrite-bom:4.0.0-SNAPSHOT"))
+    implementation 'org.dizitart:nitrite:3.4.4'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
