--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.2"
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0-RC")
+
     implementation(platform("org.dizitart:nitrite-bom:4.0.0-SNAPSHOT"))
     implementation 'org.dizitart:nitrite:3.4.4'
 
